--- a/styles/style.css
+++ b/styles/style.css
@@ -4,17 +4,24 @@
   font-family: "Lato", sans-serif;
 }
 
-.switch_banner_1 {
-  background-image: url(../images/main_bg.png);
-  background-repeat: no-repeat;
-  height: calc(100vh - 156px);
+.switch_banner {
+  height: 35vw;
 }
-.switch_banner_2 {
-  background-image: url(../images/bg_1.png);
-  background-repeat: no-repeat;
-  height: calc(100vh - 156px);
-}
+
 .switcher_stripe {
   left: calc(10%);
   top: calc(65%);
+}
+.mar {
+  margin-top: 100%;
+}
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
